# WSF-Youtube-Reporting

./: BigIdeasViews.csv  README.md  TempletonPrograms.csv  TempletonReporting.py  YoutubeConfig.py  YoutubeReporting.py  environment.yml  pyproject.toml  utils.js
BigIdeasComments/: AI and Quantum Computing: Glimpsing the Near Future.txt  AI: Grappling with a New Kind of Intelligence.txt  Beyond Einstein: Gravitational Echoes.txt  Beyond Einstein: Gravitational Rainbows.txt  Can Particles be Quantum Entangled Across Time?.txt  Carlo Rovelli and Brian Greene on Black Holes and White Holes.txt  Coding the Cosmos: Does Reality Emerge from Simple Computations?.txt  Does Quantum Mechanics imply Multiple Universes?.txt  Gravitational Waves and the Dark Universe.txt  Intelligent Thinking about Artificial Intelligence.txt  James Webb Space Telescope: Comets, Planets, and the Origin of Life.txt  Mind Over Molecules: the Biology of Memory.txt  Quantum to the Cosmos: A Brief Tour of Everything.txt  Revealing the Cosmos: A Startling New View From the James Webb Space Telescope.txt  Searching for Cosmic Origins.txt  Seeing Further: Searching for the Echoes of Creation.txt  Shedding Light on the Dark Universe.txt  String Theory, Quantum Gravity and Black Holes (Or, Are we Holograms?).txt  The Past and Future of Life and the Cosmos (Or, How We Got Here & Where We’re Going).txt  Unifying Nature’s Laws: The State of String Theory.txt  Until the End of Time: Mind, Matter and Meaning.txt  Was the Big Bang the Beginning? Reimagining Time in a Cyclic Universe.txt  (+1 more)
(+4 files in other folders)
