[tool.poetry]
name = "wsf-youtube-reporting"
version = "0.1.0"
description = ""
authors = ["Danny Swift"]

[tool.poetry.dependencies]
python = "^3.10"
tornado = "6.0.3"
oauth2client = "^4.1.3"
pandas = "^1"
ipython = "^7"
google-auth = "1.11.2"
google-api-python-client = "1.7.12"
google-auth-oauthlib = "0.4.1"
matplotlib = "^3"
seaborn = "0.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
