[project]
name = "wsf-youtube-reporting"
version = "0.1.0"
description = ""
authors = [{ name = "Danny Swift" }]
requires-python = "~=3.10"
dependencies = [
    "tornado>=6.0.3,<7",
    "oauth2client>=4.1.3,<5",
    "pandas>=2,<3",
    "ipython>=7,<8",
    "google-auth==1.11.2",
    "google-api-python-client==1.7.12",
    "google-auth-oauthlib==0.4.1",
    "matplotlib>=3,<4",
    "seaborn",
    "bs4>=0.0.1,<0.0.2",
    "ipykernel>=6.13.1,<7",
    "jupyter>=1.0.0,<2",
    "notebook>=6.4.12,<7",
]